[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peanut_butter"
version = "0.1.0"
description = "A Neural Phrase-Based MT library"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "bitsandbytes",
    "accelerate",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]
